8023697: failed class resolution reports different class name in detail message for the first and subsequent times

Cache detail message when we cache exception for constant pool resolution.

Reviewed-by: acorn, twisti, jrose